fixing minor wcag contrast problem found while reviewing pull request 225

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -102,7 +102,7 @@ body { padding: 20px 0 0; }
     padding-left: 10px;
     margin: 0px 20px;
     cursor: pointer;
-    color: #4A94B9;
+    color: #005a9c;
     display: block;
 }
 
